login, register working

--- a/admin/index.html
+++ b/admin/index.html
@@ -27,7 +27,7 @@
           </a>
         </li>
         <li>
-          <a href="user.html">
+          <a href="user.php">
             <i class='bx bxs-group' ></i>
             <span class="links_name">Users</span>
           </a>
