--- a/hr/travel_request.html
+++ b/hr/travel_request.html
@@ -110,6 +110,7 @@
               <th>DIVISION/AGENCY</th>
               <th>DESTINATION</th>
               <th>INCLUSIVE DATE</th>
+              <th>END DATE</th>
               <th>PURPOSE</th>
               <th>DTE</th>
               <th>APPROPRIATION/FUND</th>
@@ -130,6 +131,7 @@
               <td>TOD</td>
               <td>Mount Malayarat golf & Country Club</td>
               <td>01-12-2023</td>
+              <td>01-18-2023</td>
               <td>Committees for Ceremonial</td>
               <td>N/A</td>
               <td>Project Funds</td>
@@ -150,6 +152,7 @@
               <td>TOD</td>
               <td>Mount Malayarat golf & Country Club</td>
               <td>01-12-2023</td>
+              <td>01-18-2023</td>
               <td>Committees for Ceremonial</td>
               <td>N/A</td>
               <td>Project Funds</td>
@@ -170,6 +173,7 @@
               <td>TOD</td>
               <td>Mount Malayarat golf & Country Club</td>
               <td>01-12-2023</td>
+              <td>01-18-2023</td>
               <td>Committees for Ceremonial</td>
               <td>N/A</td>
               <td>Project Funds</td>
