--- a/staff/to_record.html
+++ b/staff/to_record.html
@@ -89,6 +89,7 @@
               <th>CTRL NO.</th>
               <th>DESTINATION</th>
               <th>INCLUSIVE DATE</th>
+              <th>END DATE</th>
               <th>PURPOSE</th>
               <th>DTE</th>
               <th>APPROPRIATION/FUND</th>
@@ -105,6 +106,7 @@
               <td></td>
               <td>Mount Malayarat golf & Country Club</td>
               <td>01-12-2023</td>
+              <td>01-18-2023</td>
               <td>Committees for Ceremonial</td>
               <td>N/A</td>
               <td>Project Funds</td>
@@ -121,6 +123,7 @@
               <td></td>
               <td>Mount Malayarat golf & Country Club</td>
               <td>01-12-2023</td>
+              <td>01-18-2023</td>
               <td>Committees for Ceremonial</td>
               <td>N/A</td>
               <td>Project Funds</td>
@@ -137,6 +140,7 @@
               <td></td>
               <td>Mount Malayarat golf & Country Club</td>
               <td>01-12-2023</td>
+              <td>01-18-2023</td>
               <td>Committees for Ceremonial</td>
               <td>N/A</td>
               <td>Project Funds</td>
