--- a/admin/tra_request.html
+++ b/admin/tra_request.html
@@ -118,6 +118,7 @@
               <th >DIVISION/AGENCY</th>
               <th >DESTINATION</th>
               <th >INCLUSIVE DATE</th>
+              <th >END DATE</th>
               <th >PURPOSE</th>
               <th >DTE</th>
               <th >APPROPRIATION/FUND</th>
@@ -139,6 +140,7 @@
               <td>TOD</td>
               <td>Mount Malayarat golf & Country Club</td>
               <td>01-12-2023</td>
+              <td>01-18-2023</td>
               <td>Committees for Ceremonial</td>
               <td>N/A</td>
               <td>Project Funds</td>
@@ -161,6 +163,7 @@
               <td>TOD</td>
               <td>Mount Malayarat golf & Country Club</td>
               <td>01-12-2023</td>
+              <td>01-18-2023</td>
               <td>Committees for Ceremonial</td>
               <td>N/A</td>
               <td>Project Funds</td>
@@ -183,6 +186,7 @@
               <td>TOD</td>
               <td>Mount Malayarat golf & Country Club</td>
               <td>01-12-2023</td>
+              <td>01-18-2023</td>
               <td>Committees for Ceremonial</td>
               <td>N/A</td>
               <td>Project Funds</td>
