--- a/tod/approver_gatepass.html
+++ b/tod/approver_gatepass.html
@@ -94,7 +94,7 @@
       <div class="search">
           <input class="search-box" placeholder="search">
           <button class="search_here"><i class='bx bx-search'></i></button>
-      </div>
+      </div><br>
 
       <div class="table_section">
         <table class="table_req">
