--- a/tod/approver_gatepass.html
+++ b/tod/approver_gatepass.html
@@ -23,14 +23,14 @@
     </div>
       <ul class="nav-links">
         <li>
-          <a href="approver_travel.html">
-            <i class='bx bx-grid-alt' ></i>
+          <a href="index.html">
+            <i class='fa fa-list-alt' ></i>
             <span class="links_name">Travel Request</span>
           </a>
         </li>
         <li>
           <a href="approver_gatepass.html" class="active">
-            <i class='bx bx-clipboard' ></i>
+            <i class='fa fa-file-text' ></i>
             <span class="links_name">Gatepass Request</span>
           </a>
         </li>
@@ -103,7 +103,7 @@
           <tr>
             <td data-label="DATE REQUESTED">02-07-2023</td>
             <td data-label="CONTROL NUMBER">23-07-0005</td>
-            <td data-label="GATE PASS REQUEST FILE"><i class='bx bxs-file-pdf' ></i><a href="Travel Order_Juan Dela Cruz_02-07-2023.pdf">Travel Order_Juan Dela Cruz_02-07-2023.pdf</a></td>
+            <td data-label="GATE PASS REQUEST FILE"><i class='bx bxs-file-pdf' ></i><a href="Gatepass_Juan Dela Cruz_02-07-2023.pdf">Gatepass_Juan Dela Cruz_02-07-2023.pdf</a></td>
             <td height="80px" data-label="SIGNED/APPROVED REQUEST">
               <input class="upload_btn" type="file" id="upload-file" name="filename">
               <button for= "upload-file" class="upload_btn" id="uploading" value="Upload">
