--- a/tod/approver_changepass.html
+++ b/tod/approver_changepass.html
@@ -29,14 +29,14 @@
     </div>
       <ul class="nav-links">
         <li>
-          <a href="approver_travel.html">
-            <i class='bx bx-grid-alt' ></i>
+          <a href="index.html">
+            <i class='fa fa-list-alt' ></i>
             <span class="links_name">Travel Request</span>
           </a>
         </li>
         <li>
           <a href="approver_gatepass.html">
-            <i class='bx bx-clipboard' ></i>
+            <i class='fa fa-file-text' ></i>
             <span class="links_name">Gatepass Request</span>
           </a>
         </li>
