--- a/tod/index.html
+++ b/tod/index.html
@@ -23,7 +23,7 @@
     </div>
       <ul class="nav-links">
         <li>
-          <a href="index.html" class="active">
+          <a href="approver_travel.html" class="active">
             <i class='fa fa-list-alt' ></i>
             <span class="links_name">Travel Request</span>
           </a>
