--- a/tod/approver_profile.html
+++ b/tod/approver_profile.html
@@ -21,13 +21,13 @@
       <ul class="nav-links">
         <li>
           <a href="index.html">
-            <i class='fa fa-list-alt' ></i>
+            <i class='bx bx-car' ></i>
             <span class="links_name">Travel Request</span>
           </a>
         </li>
         <li>
           <a href="approver_gatepass.html">
-            <i class='fa fa-file-text' ></i>
+            <i class='bx bx-door-open' ></i>
             <span class="links_name">Gatepass Request</span>
           </a>
         </li>
