--- a/tod/index.html
+++ b/tod/index.html
@@ -24,13 +24,13 @@
       <ul class="nav-links">
         <li>
           <a href="approver_travel.html" class="active">
-            <i class='fa fa-list-alt' ></i>
+            <i class='bx bx-car' ></i>
             <span class="links_name">Travel Request</span>
           </a>
         </li>
         <li>
           <a href="approver_gatepass.html">
-            <i class='fa fa-file-text' ></i>
+            <i class='bx bx-door-open' ></i>
             <span class="links_name">Gatepass Request</span>
           </a>
         </li>
