--- a/admin/changepass.html
+++ b/admin/changepass.html
@@ -24,8 +24,8 @@
           <!-- sidebar menu -->
   <div class="sidebar">
     <div class="logo-details">
-      <img src="profile.png" alt="">
-      <span class="logo_name">Admin</span>
+      <img src="logo.png" alt="">
+      <span class="logo_name">DICT</span>
     </div>
       <ul class="nav-links">
         <li>
@@ -38,6 +38,12 @@
           <a href="user.html">
             <i class='bx bxs-group' ></i>
             <span class="links_name">Users</span>
+          </a>
+        </li>
+        <li>
+          <a href="role.html">
+            <i class='fa fa-star'></i>
+            <span class="links_name">Role</span>
           </a>
         </li>
         <li>
