--- a/admin/index.html
+++ b/admin/index.html
@@ -16,8 +16,8 @@
             <!-- sidebar menu -->
   <div class="sidebar">
     <div class="logo-details">
-      <img src="profile.png" alt="">
-      <span class="logo_name">Admin</span>
+      <img src="logo.png" alt="">
+      <span class="logo_name">DICT</span>
     </div>
       <ul class="nav-links">
         <li>
@@ -30,6 +30,12 @@
           <a href="user.php">
             <i class='bx bxs-group' ></i>
             <span class="links_name">Users</span>
+          </a>
+        </li>
+        <li>
+          <a href="role.html">
+            <i class='fa fa-star'></i>
+            <span class="links_name">Role</span>
           </a>
         </li>
         <li>
@@ -143,15 +149,15 @@
   </section>
 
   <script>
-   let sidebar = document.querySelector(".sidebar");
-let sidebarBtn = document.querySelector(".sidebarBtn");
-sidebarBtn.onclick = function() {
-  sidebar.classList.toggle("active");
-  if(sidebar.classList.contains("active")){
-  sidebarBtn.classList.replace("bx-menu" ,"bx-menu-alt-right");
-}else
-  sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
-}
+    let sidebar = document.querySelector(".sidebar");
+    let sidebarBtn = document.querySelector(".sidebarBtn");
+      sidebarBtn.onclick = function() {
+        sidebar.classList.toggle("active");
+        if(sidebar.classList.contains("active")){
+        sidebarBtn.classList.replace("bx-menu" ,"bx-menu-alt-right");
+      }else
+        sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
+      }
  </script>
 
 <!-- Admin profile Submenu-->
