--- a/admin/profile.html
+++ b/admin/profile.html
@@ -140,10 +140,11 @@
                       <input type="text" class="form-control" id="Edit03" required>
                     </div><br>
 
-
                     <div class="role">
-                      <label for="Edit04">Role*</label>
-                      <input type="text" class="form-control" id="Edit04" required>
+                      <label for="addUser03">Role*</label>
+                      <select class="form-control" name="role">
+                        <option value="">Please select role</option>
+                      </select>
                     </div><br>
 
                     <div class="region">
