--- a/admin/role.html
+++ b/admin/role.html
@@ -109,7 +109,7 @@
               </div>
               <div class="modal-body">
 
-                <!-- Form to be fill-out to add new role -->
+                <!-- Form to be fill-out to add New role -->
                 <form>
 
                     <div class="role_name">
@@ -178,7 +178,7 @@
         <table class="table_content">
           <thead>
 
-            <!--Modal - Button used to add new role-->
+            <!--Modal - Button used to add New Role-->
             <div class="add">
              <button type="button" class="addUser" data-toggle="modal" data-target="#AddRoleModal"><i class="fa fa-plus-circle"></i>
               Add New
@@ -196,18 +196,9 @@
           </thead>
           <tbody>
             <tr>
-              <td>2</td>
+              <td>1</td>
               <td>Admin</td>
               <td>Administrator</td>
-              <td>
-                <button class="edit" data-toggle="modal" data-target="#EditRoleModal"><i class="fa fa-edit"></i></button>
-                <button class="delete"><i class="fa fa-trash"></i></button>
-              </td>
-            </tr> 
-             <tr>
-              <td>1</td>
-              <td>HR</td>
-              <td>Human Resource Staff</td>
               <td>
                 <button class="edit" data-toggle="modal" data-target="#EditRoleModal"><i class="fa fa-edit"></i></button>
                 <button class="delete"><i class="fa fa-trash"></i></button>
