--- a/ro/index.html
+++ b/ro/index.html
@@ -91,16 +91,31 @@
     <!--Dashboard page content-->
     <div class="home-content">
       <div class="overview-boxes">
-        
         <div class="box one">
+          <div class="right-side">
+            <div class="box-topic">Gatepass</div>
+            <div class="box-status">Approved</div>
+            <div class="number">0</div>
+          </div>
+          <i class='bx bx-credit-card pic app'></i>
+        </div>
+        <div class="box two">
           <div class="right-side">
             <div class="box-topic">Travel Order</div>
             <div class="box-status">Approved</div>
             <div class="number">0</div>
           </div>
           <i class='bx bx-credit-card-front pic app' ></i>
-       </div>
-        <div class="box two">
+        </div>
+         <div class="box three">
+          <div class="right-side">
+            <div class="box-topic">Gatepass</div>
+            <div class="box-status">Pending</div>
+            <div class="number">0</div>
+          </div>
+          <i class='bx bx-loader pic gate' ></i>
+        </div>
+        <div class="box four">
           <div class="right-side">
             <div class="box-topic">Travel Order</div>
             <div class="box-status">Pending</div>
@@ -108,8 +123,15 @@
           </div>
           <i class='bx bx-loader-circle pic gate' ></i>
         </div>
-         
-        <div class="box three">
+         <div class="box five">
+          <div class="right-side">
+            <div class="box-topic">Gate Pass</div>
+            <div class="box-status">Disapproved</div>
+            <div class="number">0</div>
+          </div>
+          <i class='bx bxs-dislike pic dis' ></i>
+        </div>
+        <div class="box six">
           <div class="right-side">
             <div class="box-topic">Travel Order</div>
             <div class="box-status">Disapproved</div>
@@ -120,6 +142,7 @@
       </div>
       </div>
   </section>
+
 
   <script>
    let sidebar = document.querySelector(".sidebar");
