--- a/staff/gp_record.html
+++ b/staff/gp_record.html
@@ -47,7 +47,7 @@
           </a>
         </li>
         <li class="log_out">
-          <a href="../index.php">
+          <a href="login.html">
             <i class='bx bx-log-out'></i>
             <span class="links_name">Log out</span>
           </a>
