--- a/ro/changepass_RO.html
+++ b/ro/changepass_RO.html
@@ -29,25 +29,25 @@
     </div>
       <ul class="nav-links">
         <li>
-          <a href="index_RO.html">
+          <a href="index.php">
             <i class='bx bx-grid-alt' ></i>
             <span class="links_name">Dashboard</span>
           </a>
         </li>
         <li>
-          <a href="RO_travel_request.html">
+          <a href="RO_travel_request.php">
             <i class='bx bx-clipboard' ></i>
             <span class="links_name">Request Records</span>
           </a>
         </li>
          <li>
-          <a href="tra_request.html">
+          <a href="tra_request.php">
             <i class='bx bx-send' ></i>
             <span class="links_name">Forward Request</span>
           </a>
         </li>
         <li class="log_out">
-          <a href="../index.php">
+          <a href="../includes/logout.php">
             <i class='bx bx-log-out'></i>
             <span class="links_name">Log out</span>
           </a>
@@ -74,17 +74,17 @@
             <h5>Records Officer</h5>
           </div>
           <hr>
-            <a href="profile_RO.html" class="sub-menu-link">
+            <a href="profile_RO.php" class="sub-menu-link">
               <i class='fa fa-user' ></i>
               <p> View Profile </p>
               <span>></span>
             </a>
-            <a href="changepass_RO.html" class="sub-menu-link">
+            <a href="changepass_RO.php" class="sub-menu-link">
               <i class='fa fa-lock' ></i>
               <p> Change Password </p>
               <span>></span>
             </a>
-            <a href="../index.php" class="sub-menu-link">
+            <a href="../includes/logout.php" class="sub-menu-link">
               <i class='fa fa-sign-out'></i>
               <p> Logout </p>
               <span>></span>
