--- a/hr/gatepass_request.html
+++ b/hr/gatepass_request.html
@@ -1,3 +1,20 @@
+<?php
+// Starting the session, to use and
+// store data in session variable
+session_start();
+include ('../includes/config.php');
+include ('../includes/login_check.php');
+
+  
+
+
+
+$query = mysqli_query($conn, "SELECT * FROM users WHERE username='$_SESSION[uname]'");
+$result=mysqli_fetch_array($query);
+
+
+?>
+
 <!DOCTYPE html>
 
 <html lang="en" dir="ltr">
