--- a/rd/RD_profile.html
+++ b/rd/RD_profile.html
@@ -1,3 +1,17 @@
+
+<?php 
+session_start(); 
+error_reporting(0);
+include ('../includes/config.php');
+include ('../includes/login_check.php');
+
+
+    $query = mysqli_query($conn,"select * from users where id='$_SESSION[id]'");
+    $rowi = mysqli_fetch_array($query);   
+
+
+?>
+
 <!DOCTYPE html>
 
 <html lang="en" dir="ltr">
