--- a/staff/gp_record.html
+++ b/staff/gp_record.html
@@ -23,31 +23,55 @@
     </div>
       <ul class="nav-links">
         <li>
-          <a href="index_STAFF.html">
+          <a href="index.php">
             <i class='fa fa-user-circle' ></i>
             <span class="links_name">Profile</span>
           </a>
         </li>
         <li>
-          <a href="travel_form.html">
+          <a href="travel_form.php">
             <i class='fa fa-wpforms' ></i>
             <span class="links_name">Request Travel Order</span>
           </a>
         </li>
          <li>
-          <a href="gatepass_form.html">
+          <a href="gatepass_form.php">
             <i class='bx bx-file' ></i>
             <span class="links_name">Request Gatepass</span>
           </a>
         </li>
         <li>
-          <a href="to_record.html" class="active">
-            <i class='bx bx-file-blank' ></i>
-            <span class="links_name">Request History</span>
+          <a class="dropdown-btn">
+            <i class="bx bx-file-blank"></i>
+            <span class="links_name">Request History</span> <i class="fa fa-caret-down arrow"></i>
           </a>
-        </li>
+
+        <div class="dropdown-container">
+            <a href="to_record.php" class="sub-item"> <i></i><span class="links_name">Travel Order</span></a>
+            <a href="gp_record.php" class="sub-item"> <i></i> <span class="links_name">Gate Pass</span></a>
+        </div>
+      </li>
+
+              <script>
+               var dropdown = document.getElementsByClassName("dropdown-btn");
+                var i;
+
+              for (i = 0; i < dropdown.length; i++) {
+                dropdown[i].addEventListener("click", function() {
+                  this.classList.toggle("active");
+                  var dropdownContent = this.nextElementSibling;
+                  if (dropdownContent.style.display === "block") {
+                    dropdownContent.style.display = "none";
+                  } else {
+                    dropdownContent.style.display = "block";
+                  }
+                });
+              }
+
+
+              </script>
         <li class="log_out">
-          <a href="login.html">
+          <a href="../includes/logout.php">
             <i class='bx bx-log-out'></i>
             <span class="links_name">Log out</span>
           </a>
@@ -79,8 +103,8 @@
 
           	<!-- Option button to choose which table to display-->
           	<div class="btn">
-              <a href="to_record.html">Travel Order</a> >
-              <a href="gp_record.html" class="act">Gatepass</a>
+              <a href="to_record.php">Travel Order</a> >
+              <a href="gp_record.php" class="act">Gatepass</a>
             </div><br><br>
             
                 <!-- Table for list of Gatepass request -->
