--- a/staff/to_record.html
+++ b/staff/to_record.html
@@ -1,22 +1,3 @@
-<?php
-// Starting the session, to use and
-// store data in session variable
-session_start();
-include ('../includes/config.php');
-include ('../includes/login_check.php');
-
-  
-
-
-
-$query = mysqli_query($conn, "SELECT * FROM users WHERE username='$_SESSION[uname]'");
-$result=mysqli_fetch_array($query);
-
-
-?>
-
-
-
 <!DOCTYPE html>
 
 <html lang="en" dir="ltr">
@@ -28,7 +9,7 @@ $result=mysqli_fetch_array($query);
     
       <!-- Bootstrap CSS File-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -59,19 +40,46 @@ $result=mysqli_fetch_array($query);
             <span class="links_name">Request Gatepass</span>
           </a>
         </li>
-        <li>
-          <a href="to_record.html" class="active">
-            <i class='bx bx-file-blank' ></i>
-            <span class="links_name">Request History</span>
-          </a>
+        
+         <li>
+            <a class="dropdown-btn">
+              <i class="bx bx-file-blank"></i>
+              <span class="links_name">Request History</span> <i class="fas fa-caret-down arrow"></i>
+            </a>
+
+          <div class="dropdown-container">
+              <a href="to_record.html" class="sub-item"> <i></i><span class="links_name">Travel Order</span></a>
+              <a href="gp_record.html" class="sub-item"> <i></i> <span class="links_name">Gate Pass</span></a>
+          </div>
         </li>
+
+                <script>
+                 var dropdown = document.getElementsByClassName("dropdown-btn");
+                  var i;
+
+                for (i = 0; i < dropdown.length; i++) {
+                  dropdown[i].addEventListener("click", function() {
+                    this.classList.toggle("active");
+                    var dropdownContent = this.nextElementSibling;
+                    if (dropdownContent.style.display === "block") {
+                      dropdownContent.style.display = "none";
+                    } else {
+                      dropdownContent.style.display = "block";
+                    }
+                  });
+                }
+
+
+                </script>
+
         <li class="log_out">
-          <a href="login.html">
+          <a href="../index.php">
             <i class='bx bx-log-out'></i>
             <span class="links_name">Log out</span>
           </a>
         </li>
       </ul>
+
   </div>
 
   <section class="home-section">
@@ -107,8 +115,8 @@ $result=mysqli_fetch_array($query);
               <th>TRAVEL ORDER NO.</th>
               <th>CTRL NO.</th>
               <th>DESTINATION</th>
-              <th>INCLUSIVE DATE OF TRAVEL</th>
-              <th>END DATE OF TRAVEL</th>
+              <th>INCLUSIVE DATE</th>
+              <th>END DATE</th>
               <th>PURPOSE</th>
               <th>DTE</th>
               <th>APPROPRIATION/FUND</th>
@@ -125,7 +133,7 @@ $result=mysqli_fetch_array($query);
               <td></td>
               <td>Mount Malayarat golf & Country Club</td>
               <td>01-12-2023</td>
-              <td>01-20-2023</td>
+              <td>01-18-2023</td>
               <td>Committees for Ceremonial</td>
               <td>N/A</td>
               <td>Project Funds</td>
@@ -142,7 +150,7 @@ $result=mysqli_fetch_array($query);
               <td></td>
               <td>Mount Malayarat golf & Country Club</td>
               <td>01-12-2023</td>
-              <td>01-20-2023</td>
+              <td>01-18-2023</td>
               <td>Committees for Ceremonial</td>
               <td>N/A</td>
               <td>Project Funds</td>
@@ -159,7 +167,7 @@ $result=mysqli_fetch_array($query);
               <td></td>
               <td>Mount Malayarat golf & Country Club</td>
               <td>01-12-2023</td>
-              <td>01-20-2023</td>
+              <td>01-18-2023</td>
               <td>Committees for Ceremonial</td>
               <td>N/A</td>
               <td>Project Funds</td>
